tests/should_fail/number_plus_string.luma
var x = 5
x + "hello"
